# merklith

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_FULL.md  Dockerfile  Dockerfile.local  GEMINI_BUGS.md  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml  install.sh  monitor.ps1  test_merklith.ps1  test_merklith.sh  test_rpc.ps1  test_transactions.ps1
.github/workflows/: ci.yml  release.yml
benches/: Cargo.toml
benches/benches/: consensus.rs  storage.rs  throughput.rs
bot/: auto_transfer.sh  faucet_bot.py  test_transfer.py
config/: devnet.toml  genesis.json
contracts/examples/: Cargo.toml
contracts/examples/src/: bridge.rs  dex.rs  erc20.rs  erc721.rs  governance.rs  lib.rs  staking_rewards.rs
contracts/system-contracts/: Cargo.toml
contracts/system-contracts/src/: bridge.rs  governance.rs  lib.rs  staking.rs  treasury.rs
crates/merklith-audit/src/: lib.rs
crates/merklith-cli/: Cargo.toml
crates/merklith-cli/src/: commands.rs  config.rs  keystore.rs  main.rs  output.rs  rpc_client.rs  tests.rs
crates/merklith-cli/src/explorer/: app.rs  mod.rs  ui.rs  widgets.rs
crates/merklith-consensus/: Cargo.toml
crates/merklith-consensus/src/: advanced_consensus.rs  committee.rs  error.rs  finality.rs  lib.rs  poc.rs  poc_engine.rs  slashing.rs  validator.rs
crates/merklith-core/: Cargo.toml
crates/merklith-core/src/: analytics.rs  block_builder.rs  chain.rs  error.rs  fee_market.rs  high_availability.rs  lib.rs  performance.rs  state.rs  state_machine.rs  zk_rollup.rs
crates/merklith-crypto/: Cargo.toml
crates/merklith-crypto/benches/: crypto_bench.rs
crates/merklith-crypto/src/: bls.rs  ed25519.rs  error.rs  hash.rs  keystore.rs  lib.rs  merkle.rs  vrf.rs
crates/merklith-governance/: Cargo.toml
crates/merklith-governance/src/: delegation.rs  error.rs  lib.rs  proposal.rs  treasury.rs  voting.rs
crates/merklith-network/: Cargo.toml
crates/merklith-network/src/: lib.rs
crates/merklith-node/: Cargo.toml
crates/merklith-node/src/: config.rs  main.rs  metrics.rs  node.rs  telemetry.rs
crates/merklith-rpc/: Cargo.toml
crates/merklith-rpc/src/: cors.rs  error.rs  handlers.rs  lib.rs  middleware.rs  security.rs  security_tests.rs  server.rs  subscriptions.rs
crates/merklith-security/src/: lib.rs
crates/merklith-storage/: Cargo.toml
crates/merklith-storage/benches/: storage_bench.rs
crates/merklith-storage/src/: block_db.rs  block_store.rs  db.rs  error.rs  lib.rs  pruning.rs  state_db.rs
crates/merklith-storage/src/trie/: mod.rs  trie.rs
crates/merklith-txpool/: Cargo.toml
crates/merklith-txpool/src/: batch.rs  error.rs  lib.rs  ordering.rs  pool.rs  validation.rs
crates/merklith-types/: Cargo.toml
crates/merklith-types/benches/: types_bench.rs
crates/merklith-types/src/: account.rs  address.rs  block.rs  chain_config.rs  error.rs  genesis.rs  hash.rs  hd_wallet.rs  lib.rs  receipt.rs  serialization.rs  signature.rs  transaction.rs  u256.rs
crates/merklith-vm/: Cargo.toml
crates/merklith-vm/src/: error.rs  gas_metering.rs  lib.rs  merkle_trie.rs  reentrancy.rs  runtime.rs  wasm_runtime.rs
docs/: API.md  ARCHITECTURE.md  CLI_GUIDE.md  EXPLORER.md  README.md
docs/advanced/: ARCHITECTURE_DEEP_DIVE.md
docs/api/: API_REFERENCE.md
docs/basics/: 01-blockchain-basics.md
docs/whitepaper/: ANVIL_WHITEPAPER.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: merklith-dashboard.json
packaging/homebrew/: merklith.rb
sdk/merklith-sdk-rs/: Cargo.toml
sdk/merklith-sdk-rs/merklith-sdk-derive/: Cargo.toml
sdk/merklith-sdk-rs/merklith-sdk-derive/src/: lib.rs
sdk/merklith-sdk-rs/src/: client.rs  contract.rs  errors.rs  events.rs  lib.rs  types.rs  wallet.rs
sdk/merklith-sdk-ts/: package-lock.json  package.json  tsup.config.ts
sdk/merklith-sdk-ts/src/: block.ts  client.ts  contract.ts  index.ts  sdk.ts  transaction.ts  types.ts  utils.ts  wallet.ts
tests/: integration_tests.rs
web/: README.md  docker-compose.yml
web/api/: Cargo.toml
web/api/src/: main.rs
web/explorer/: app.js  cors-proxy-simple.py  cors-proxy.py  index-backup.html  index.html  index.html.backup  package-lock.json  package.json  proxy-server.js
web/explorer/public/: index.html
web/explorer/src/: App.js
web/explorer/src/hooks/: useAnvil.js  useMerklith.js
web/explorer/src/pages/: APIDocs.js  AccountDetail.js  BlockDetail.js  BlockList.js  Home.js  SearchResults.js  Stats.js  TransactionDetail.js  TransactionList.js  Validators.js
web/nginx/: nginx.conf
web/wallet/: package-lock.json  package.json
web/wallet/public/: index.html
web/wallet/src/: App.js
