[package]
name = "merklith-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Consensus mechanism for MERKLITH blockchain"

[dependencies]
merklith-types = { workspace = true }
merklith-crypto = { workspace = true }
merklith-storage = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
