[package]
name = "merklith-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core blockchain logic for MERKLITH"

[dependencies]
merklith-types = { workspace = true }
merklith-crypto = { workspace = true }
merklith-storage = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = "1"
lru = "0.12"
async-trait = "0.1"
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
