[package]
name = "merklith-governance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Governance engine for MERKLITH blockchain"

[dependencies]
merklith-types = { workspace = true }
merklith-core = { workspace = true }
merklith-storage = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
