[package]
name = "merklith-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Networking layer for MERKLITH blockchain"

[dependencies]
merklith-types = { workspace = true }
merklith-crypto = { workspace = true }
merklith-storage = { workspace = true }
merklith-consensus = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"
rand = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
