[package]
name = "merklith-txpool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Transaction pool for MERKLITH blockchain"

[dependencies]
merklith-types = { workspace = true }
merklith-core = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
