[package]
name = "merklith-vm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM virtual machine for MERKLITH blockchain"

[dependencies]
merklith-types = { workspace = true }
merklith-crypto = { workspace = true }
wasmi = { version = "0.31", features = ["std"] }
wasmtime = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wat = "1.0"
