[package]
name = "merklith-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK for MERKLITH smart contract development"

[dependencies]
merklith-types = { workspace = true, features = ["borsh"] }
merklith-crypto = { workspace = true }
merklith-sdk-derive = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
thiserror = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }