[package]
name = "merklith-web-api"
version.workspace = true
edition.workspace = true

[dependencies]
# Core dependencies
merklith-types = { workspace = true }
merklith-rpc = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "sqlite"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Real-time
tokio-tungstenite = "0.21"
futures = "0.3"

# Caching
moka = { version = "0.12", features = ["future"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Config
config = "0.14"
dotenv = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"